--- a/style.css
+++ b/style.css
@@ -114,3 +114,47 @@ body {
     justify-content: center;
     border-radius: 50%;
 }
+
+/*Seccion sobre mi*/
+
+.sobreMi {
+    grid-area: sobreMi;
+    padding: 2rem 0 2rem 1rem;
+    color: #111135;
+    background: #f3f3f3;
+    display: flex;
+    flex-direction: column;
+}
+.sobreMi__titulo {
+    font-size: 22px;
+    color: #111135;
+    text-decoration: underline;
+    text-decoration-color: #d3d3d3;
+    text-decoration-thickness: 5px;
+    letter-spacing: 2px;
+}
+.sobreMi__descripcion {
+    font-size: 14px;
+    line-height: 25px;
+    color: #565656;
+    margin-bottom: 1rem;
+}
+.sobreMI__firma {
+
+}
+.sobreMi__DescargarCV {    
+    width: 7rem;
+    text-align: center;
+    align-self: center;
+    text-decoration: none;
+    color: #000000;
+    border-radius: 30px;
+    padding: 10px;
+    border: 1px solid #000000;
+    margin-top: 20px;
+    transition: .5s;
+}
+.sobreMi__DescargarCV:hover {
+    background-color: #ff5080;
+    color: #ffffff;
+}
