--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
+    padding-bottom: 10px;
 }
 .encabezado__titulo {
     text-decoration: none;
@@ -28,15 +29,17 @@ body {
 }
 .encabezado__menu {
     list-style: none;
-    display: flex; 
-    flex-direction: column;
-    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 5px;
+    justify-content: center;
 
+}
+.encabezado__menu li {
+    padding: 7px 7px;
 }
 .encabezado__menu li a {
     text-decoration: none;
-    margin: 1rem;
-    padding-right: 1rem;
     font-weight: 400;
     transition: .5s;
     color: #ffffff;
