modifico style correspondiente a section sobre-mi

--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ body {
     grid-template-areas:
     "presentacion"
     "sobreMi"
-    "skills&hobbies"
+    "skills-hobbies"
     "formacion"
     "proyectos"
     "contacto";
