--- a/css/sobre-mi.css
+++ b/css/sobre-mi.css
@@ -3,6 +3,26 @@
     grid-column: 1/2;
     grid-row: 2/3;
     height: auto;
-    text-align: center;
     padding: 0 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.contenido__sobreMi__titulo {
+    text-align: center;
+}
+.contenido__sobreMi__descripcion {
+    font-size: 18px;
+}
+.contenido__sobreMi__firma {
+    align-self: flex-start;
+    margin: 1rem 0;
+}
+.contenido__sobreMi__descargar-cv {
+    text-decoration: none;
+    text-align: center;
+    margin-bottom: 2rem;
+    border: 1px solid #ff5080;
+    border-radius: 50px;
+    padding: 10px;
 }
