--- a/css/sobre-mi.css
+++ b/css/sobre-mi.css
@@ -12,7 +12,7 @@
     text-align: center;
 }
 .contenido__sobreMi__descripcion {
-    font-size: 18px;
+    font-size: 14px;
 }
 .contenido__sobreMi__firma {
     align-self: flex-start;
@@ -25,4 +25,5 @@
     border: 1px solid #ff5080;
     border-radius: 50px;
     padding: 10px;
+    color: #000000;
 }
